Text aligns correctly with slider

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,10 @@
     width: 100%;
 }
 
+#slider-text {
+    text-anchor: middle;
+}
+
 iframe {
 /*    margin-left: 28vw;*/
     display: block;
